$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2008-08-17 [A] API documentation, enabled oauth_signature checking, removed oauth/test.php, various API function tweaks {daorange}
2008-08-16 [A] Wrote the servers admin for the SFTP storage module (Click Config > SFTP Storage Module > Manage SFTP servers ) {zmarty}
2008-08-16 [M] Some code cleanup, renaming of config variables {zmarty}
2008-08-16 [A] The descriptions of config options in the FTP/SFTP admin are now taken from the lang file {zmarty}
2008-08-16 [A] Wrote the admin module for the SFTP storage module {zmarty}
2008-08-16 [B] Fixed Mirrored copies bug in SFTP and FTP admin {zmarty}
2008-08-16 [B] Fixed Keep a copy of each image on the local server bug in SFTP/FTP admin {zmarty}
2008-08-13 [A] API picture list can now be filtered by meta albums {daorange}
2008-08-12 [C] Small fix: Commented an echo {zmarty}
2008-08-12 [A] Images can now be deleted from editpics.php via the storage modules {zmarty}
2008-08-12 [A] FTP servers can now be added, edited, deleted from Coppermine {zmarty}
2008-08-12 [B] API category list should work now {daorange}
2008-08-11 [B] Added ability to filter API album list by category and picture list by album {daorange}
2008-08-10 [A] Added API search, partial category list {daorange}
2008-08-03 [A] First version of the SSH2/SFTP module {zmarty}
2008-07-30 [A] Created the first version of the FTP Storage module config tab, in admin.php {zmarty}
2008-07-30 [A] Coded a way for storage module to register config tabs for admin.php {zmarty}
2008-07-26 [A] The active storage module can be configured in admin.php {zmarty}